# DailyOracleMemeBot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  authorized-testers.yaml.example  bot.py  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  service.py  setup.cfg  storage.py
app/: main.py
app/bot/: bot.py  handler.py  sender.py
app/bot/core/: access.py  authorizer.py  getter.py  handler.py  interactor.py  sender.py  writer.py
app/bot/schema/: response_types.py
app/database/: exceptions.py  factory_interface.py  models.py  repository_interface.py
app/database/interfaces/: factory.py  repository.py
app/database/postgres/: factory.py  provider.py  repository.py
app/db/: db_interface.py  factory_interface.py  models.py  provider_interface.py  repository_interface.py
app/db/postgres/: db.py  factory.py  provider.py  repository.py
app/service/: facade.py  interaction_service.py  item_service.py  service.py
app/storage/: base.py  exceptions.py  minio_storage.py  storage_interface.py
app/utils/: logger_setup.py
docker/minio_mc/: Dockerfile  minio_setup.sh
docker/nginx/: nginx.conf  nginx_logrotate.conf
docker/nginx/local/: nginx.conf
docker/nginx/prod/: generate_cert.sh  nginx.conf
docker/nginx/test/: nginx.conf
docker/postgres/initdb/: create_database.sql  init.sql
docker/sync_worker/: Dockerfile  requirements.txt
docker/telegram_bot/: Dockerfile  requirements.txt
scripts/: create_htpasswd.sh
scripts/minio/: setup_webhook.sh
scripts/nginx/: generate-cert.sh
scripts/tg_parser/: .env.example  config.py  downloader.py  main.py  parser.py  tg_parser.py
sync_worker/: event_handlers.py  event_models.py  main.py
tests/app/bot/: test_bot.py
tests/app/storage/: test_minio_storage.py
tests/sync_worker/: test_event_models.py
