[tool.poetry]
name = "dailyoraclememebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    { include = "app"},
    { include = "sync_worker"},
]
[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.0"
pytelegrambotapi = "^4.26.0"
minio = "^7.2.15"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
pydantic = "^2.11.3"
fastapi = "^0.115.12"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
pylint = "3.1.0"
mypy = "1.13.0"
flake8 = "7.0.0"
pytest = "8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
exclude = '''
/(
  \.venv
)/
'''

[tool.mypy]
exclude = '\.venv'

[[tool.mypy.overrides]]
module = ["telebot.*"]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",   # C0114
    "missing-class-docstring",    # C0115
    "missing-function-docstring"  # C0116
]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MASTER']
ignore-paths = ["^tests/"]